8/29 content wraps were initialized with 100% width and needed to start with 85% to avoid the overflow because even if the nav is set to closed, it starts open and quickly closes on page load.

--- a/PMT/PMT/Styles/Agile/storyDetails.scss
+++ b/PMT/PMT/Styles/Agile/storyDetails.scss
@@ -56,7 +56,7 @@
   }
   .btn-wrap {
     @include Flex-Row(center, center, 100%, 100%);
-    margin-top: 2vh;
+    margin: 2vh 0vw 6vh;
     .btn {
       margin: 0vh 1vw;
     }
