--- a/PMT/PMT/Styles/site.scss
+++ b/PMT/PMT/Styles/site.scss
@@ -117,6 +117,7 @@ nav {
   left: -17vw;
 }
 .content-container {
+  width: 84%;
   margin-left: 15vw;
   transition: margin 0.25s, width 0.25s;
 }
